<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin0.5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvBulanTrackRecord"
            android:text="@string/track_record_bulan"
            android:gravity="center"
            android:layout_weight="0.70"
            style="@style/TextViewTable"/>
        <TextView
            android:id="@+id/tvApprTrackRecord"
            android:text="@string/track_record_appr"
            style="@style/TextViewTable"/>
        <TextView
            android:id="@+id/tvReturTrackRecord"
            android:text="@string/track_record_target"
            style="@style/TextViewTable"/>
        <TextView
            android:id="@+id/tvPresentasiTrackRecord"
            android:text="@string/track_record_presentasi"
            android:layout_weight="0.70"
            style="@style/TextViewTable"/>
    </LinearLayout>
</FrameLayout>