<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/deskripsi_logo"
        android:src="@drawable/logo_kreator" />

    <EditText
        style="@style/ShortInput"
        android:id="@+id/usernameLogin"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        style="@style/ShortInput"
        android:id="@+id/passwordLogin"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:onClick="checkLogin"
        android:textSize="@dimen/font_small_0"
        android:text="@string/login_CRTool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
