<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:text="@string/old_password"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:text="@string/titik_dua"
                    android:gravity="end" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etPasswdLama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/old_password"
                        android:minWidth="200dp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:text="@string/new_password"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:text="@string/titik_dua"
                    android:gravity="end" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etPasswdBaru"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/new_password"
                        android:minWidth="200dp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:text="@string/confirm_new_password"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:text="@string/titik_dua"
                    android:gravity="end" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etConfirmPasswdBaru"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_new_password"
                        android:minWidth="200dp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cr_change_password"
                android:background="@color/colorPrimary"
                android:id="@+id/btnUpdatePasswd"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_change_password_progressbar"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateBehavior="cycle" />
</RelativeLayout>